# cachew

./: .bandit.yml  .gitignore  .pylintrc  LICENSE.txt  README.ipynb  README.md  README.org  cog  conftest.py  dev-requirements.txt  generate-readme  github-issues.org  mypy.ini  pyproject.toml  pytest.ini  readme.tpl  release  requirements.txt  ruff.toml  setup.cfg  setup.py  tox.ini  ty.toml
.benchmarks/Linux-CPython-3.12-64bit/: 0001_baseline.json
.benchmarks/Linux-CPython-3.14-64bit/: 0001_baseline.json  0003_baseline.json  0007_baseline.json
.ci/: run
.circleci/: config.yml
.github/workflows/: main.yml
benchmarks/: 20230912-comparison-with-legacy.org  20230912.org  20230917.org
doc/: cachew_disable.md  development.md  serialization.org  test_serialization.py
kython/: kcache.py
misc/: profile.py  test_nosql.py
misc/test_redis/: docker-compose.yml  test.py
src/cachew/: __init__.py  _disable.py  _infer.py  _synthetic.py  _types.py  common.py  compat.py  experimental.py  extra.py  legacy.py  logging_helper.py  misc.py  pytest.py  utils.py
src/cachew/backend/: common.py  file.py  sqlite.py
src/cachew/marshall/: cachew.py  common.py
src/cachew/tests/: marshall.py  test_cachew.py  test_future_annotations.py  test_resolve_type_parameters.py  utils.py
src/cachew/tests/benchmarks/: common.py  conftest.py  marshall.py  pipeline.py
