# see https://github.com/karlicoss/pymplate for up-to-date reference
[project]
dynamic = ["version"]  # version is managed by build backend
name = "cachew"
dependencies = [
    "platformdirs",     # default cache dir
    "sqlalchemy>=1.0",  # cache DB interaction
    "orjson",           # fast json serialization
]
requires-python = ">=3.9"

## these need to be set if you're planning to upload to pypi
# description = "TODO"
license = {file = "LICENSE.txt"}
authors = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
maintainers = [
    {name = "Dima Gerasimov (@karlicoss)", email = "karlicoss@gmail.com"},
]
# keywords = []
# # see: http://pypi.python.org/pypi?%3Aaction=list_classifiers
# classifiers = [
# ]


[project.urls]
Homepage = "https://github.com/karlicoss/cachew"
##


[project.optional-dependencies]
optional = [
    "colorlog",
]
[dependency-groups]
testing = [
    "pytz", "types-pytz",  # optional runtime only dependency

    "pytest",
    "more-itertools",
    "patchy",  # for injecting sleeps and testing concurrent behaviour
    "enlighten",  # used in logging helper, but not really required
    "cattrs",  # benchmarking alternative marshalling implementation
    "pyinstrument",  # for profiling from within tests
    "codetiming", # Timer context manager

    "ruff",
    "mypy",
    "lxml",  # for mypy html coverage
]


# workaround for error during uv publishing
# see https://github.com/astral-sh/uv/issues/9513#issuecomment-2519527822
[tool.setuptools]
license-files = []


[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

# unfortunately have to duplicate project name here atm, see https://github.com/pypa/hatch/issues/1894
[tool.hatch.build.targets.wheel]
packages = ["src/cachew"]

[tool.hatch.version]
source = "vcs"

[tool.hatch.version.raw-options]
version_scheme = "python-simplified-semver"
local_scheme = "dirty-tag"
