[metadata]
name = cachew
description = Easy sqlite-backed persistent cache for dataclasses
author = Dima Gerasimov
author-email = karlicoss@gmail.com
license = mit
long-description = file: README.md
long-description-content-type = text/markdown; charset=UTF-8
url = https://github.com/karlicoss/cachew
# Change if running only on Windows, Mac or Linux (comma-separated)
platforms = any
# Add here all kinds of additional classifiers as defined under
# https://pypi.python.org/pypi?%3Aaction=list_classifiers
classifiers =
    Development Status :: 4 - Beta

    Topic :: Database

    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
# DON'T CHANGE THE FOLLOWING LINE! IT WILL BE UPDATED BY PYSCAFFOLD!
setup_requires = pyscaffold>=3.2a0,<3.3a0
# Add here dependencies of your project (semicolon/line-separated), e.g.
install_requires =
    sqlalchemy

# The usage of test_requires is discouraged, see `Dependency Management` docs
# tests_require = pytest; pytest-cov
# Require a specific Python version, e.g. Python 2.7 or >= 3.4
# python_requires = >=2.7,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*

[options.packages.find]
where = src
exclude =
    tests

# specified in setup.py
# [options.extras_require]


[test]
# py.test options when running `python setup.py test`
# addopts = --verbose
extras = True

[tool:pytest]
python_files = *.py
addopts =
    --verbose
    --doctest-modules
    --pyargs
norecursedirs =
    dist
    build
    .tox
testpaths = cachew

[aliases]
dists = bdist_wheel

[bdist_wheel]
# Use this option if your package is pure-python
universal = 1

[build_sphinx]
source_dir = docs
build_dir = docs/_build

# TODO what's that?
[devpi:upload]
# Options for the devpi: PyPI server and packaging tool
# VCS export must be deactivated since we are using setuptools-scm
no-vcs = 1
formats = bdist_wheel
